crates/schemas/tests/snapshots/schema_snapshot_tests__calibration_type_variants_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "formatted.join(\"\\n\")"
---
Center: "Center"
Range: "Range"
Pedals: "Pedals"
Full: "Full"
