crates/schemas/tests/snapshots/schema_snapshot_tests__device_capabilities_belt_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "supports_pid": true,
  "supports_raw_torque_1khz": false,
  "supports_health_stream": false,
  "supports_led_bus": false,
  "max_torque": 3.0,
  "encoder_cpr": 4096,
  "min_report_period_us": 4000
}
