crates/schemas/tests/snapshots/schema_snapshot_tests__device_capabilities_dd_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "supports_pid": false,
  "supports_raw_torque_1khz": true,
  "supports_health_stream": true,
  "supports_led_bus": true,
  "max_torque": 25.0,
  "encoder_cpr": 65535,
  "min_report_period_us": 1000
}
