crates/schemas/tests/snapshots/schema_snapshot_tests__device_state_variants_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "formatted.join(\"\\n\")"
---
Disconnected: "Disconnected"
Connected: "Connected"
Active: "Active"
Faulted: "Faulted"
SafeMode: "SafeMode"
