crates/schemas/tests/snapshots/schema_snapshot_tests__device_type_variants_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "formatted.join(\"\\n\")"
---
Other: "Other"
WheelBase: "WheelBase"
SteeringWheel: "SteeringWheel"
Pedals: "Pedals"
Shifter: "Shifter"
Handbrake: "Handbrake"
ButtonBox: "ButtonBox"
