crates/schemas/tests/snapshots/schema_snapshot_tests__normalized_telemetry_default_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "speed_ms": 0.0,
  "steering_angle": 0.0,
  "throttle": 0.0,
  "brake": 0.0,
  "clutch": 0.0,
  "rpm": 0.0,
  "max_rpm": 0.0,
  "gear": 0,
  "num_gears": 0,
  "lateral_g": 0.0,
  "longitudinal_g": 0.0,
  "vertical_g": 0.0,
  "slip_ratio": 0.0,
  "slip_angle_fl": 0.0,
  "slip_angle_fr": 0.0,
  "slip_angle_rl": 0.0,
  "slip_angle_rr": 0.0,
  "tire_temps_c": [
    0,
    0,
    0,
    0
  ],
  "tire_pressures_psi": [
    0.0,
    0.0,
    0.0,
    0.0
  ],
  "ffb_scalar": 0.0,
  "ffb_torque_nm": 0.0,
  "flags": {
    "yellow_flag": false,
    "red_flag": false,
    "blue_flag": false,
    "checkered_flag": false,
    "green_flag": true,
    "pit_limiter": false,
    "in_pits": false,
    "drs_available": false,
    "drs_active": false,
    "ers_available": false,
    "ers_active": false,
    "launch_control": false,
    "traction_control": false,
    "abs_active": false,
    "engine_limiter": false,
    "safety_car": false,
    "formation_lap": false,
    "session_paused": false
  },
  "position": 0,
  "lap": 0,
  "current_lap_time_s": 0.0,
  "best_lap_time_s": 0.0,
  "last_lap_time_s": 0.0,
  "delta_ahead_s": 0.0,
  "delta_behind_s": 0.0,
  "fuel_percent": 0.0,
  "engine_temp_c": 0.0,
  "sequence": 0
}
