crates/schemas/tests/snapshots/schema_snapshot_tests__normalized_telemetry_populated_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "speed_ms": 45.0,
  "steering_angle": 0.15,
  "throttle": 0.8,
  "brake": 0.1,
  "clutch": 0.0,
  "rpm": 6500.0,
  "max_rpm": 8000.0,
  "gear": 4,
  "num_gears": 6,
  "lateral_g": 1.2,
  "longitudinal_g": -0.3,
  "vertical_g": 0.0,
  "slip_ratio": 0.05,
  "slip_angle_fl": 0.0,
  "slip_angle_fr": 0.0,
  "slip_angle_rl": 0.0,
  "slip_angle_rr": 0.0,
  "tire_temps_c": [
    85,
    90,
    80,
    82
  ],
  "tire_pressures_psi": [
    26.5,
    27.0,
    25.0,
    25.5
  ],
  "ffb_scalar": 0.75,
  "ffb_torque_nm": 8.5,
  "flags": {
    "yellow_flag": false,
    "red_flag": false,
    "blue_flag": false,
    "checkered_flag": false,
    "green_flag": true,
    "pit_limiter": false,
    "in_pits": false,
    "drs_available": false,
    "drs_active": false,
    "ers_available": false,
    "ers_active": false,
    "launch_control": false,
    "traction_control": false,
    "abs_active": false,
    "engine_limiter": false,
    "safety_car": false,
    "formation_lap": false,
    "session_paused": false
  },
  "car_id": "porsche-911-gt3-r",
  "track_id": "spa-francorchamps",
  "position": 0,
  "lap": 0,
  "current_lap_time_s": 0.0,
  "best_lap_time_s": 0.0,
  "last_lap_time_s": 0.0,
  "delta_ahead_s": 0.0,
  "delta_behind_s": 0.0,
  "fuel_percent": 0.0,
  "engine_temp_c": 0.0,
  "sequence": 0
}
