crates/schemas/tests/snapshots/schema_snapshot_tests__profile_scope_game_car_track_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "game": "iRacing",
  "car": "porsche-911-gt3-r",
  "track": "spa"
}
