crates/schemas/tests/snapshots/schema_snapshot_tests__profile_scope_global_json.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: json
---
{
  "game": null,
  "car": null,
  "track": null
}
