crates/schemas/tests/snapshots/schema_snapshot_tests__schema_error_compilation.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Schema compilation error: invalid $ref pointer
