crates/schemas/tests/snapshots/schema_snapshot_tests__schema_error_non_monotonic.snap
---
source: crates/schemas/tests/schema_snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Curve points are not monotonic
